--- a/xamarin/RemoteTouch/RemoteTouch/RemoteTouch/MainPage.xaml
+++ b/xamarin/RemoteTouch/RemoteTouch/RemoteTouch/MainPage.xaml
@@ -3,16 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:RemoteTouch"
              x:Class="RemoteTouch.MainPage">
-    <StackLayout Spacing="20" 
+    <StackLayout Spacing="20"
                  VerticalOptions="FillAndExpand">
-        
-        <Label Text="Welcome to Xamarin Forms!" 
-               HorizontalOptions="Center" 
+
+        <Label Text="Welcome to Xamarin Forms!"
+               HorizontalOptions="Center"
                x:Name="label"/>
-        <Button Text="Click me" 
+        <Button Text="Click me"
                 Clicked="OnButtonClicked"
-               HorizontalOptions="Center" 
+               HorizontalOptions="Center"
                 />
-        
+        <Button Text="Create notification"
+                Clicked="OnCreateNotification"
+                HorizontalOptions="Center"
+               />
+
     </StackLayout>
 </ContentPage>
