Show number of handled notifications

--- a/android/RemoteTouch/app/src/main/res/layout/content_main.xml
+++ b/android/RemoteTouch/app/src/main/res/layout/content_main.xml
@@ -33,6 +33,17 @@
         app:layout_constraintHorizontal_bias="0.047"
         app:layout_constraintVertical_bias="0.032"/>
 
+    <Button
+        android:id="@+id/notificationsBt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:onClick="onNotificationsBtClick"
+        android:text="Notifications"
+        app:layout_constraintLeft_toRightOf="@+id/smsBt"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="351dp"
