--- a/android/RemoteTouch/app/src/main/res/layout/content_main.xml
+++ b/android/RemoteTouch/app/src/main/res/layout/content_main.xml
@@ -9,50 +9,54 @@
     tools:context="cz.zelenikr.remotetouch.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <Button
-        android:id="@+id/smsBt"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/buttonPanel"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:onClick="onSmsBtClick"
-        android:text="sms"
-        app:layout_constraintLeft_toRightOf="@+id/callsBt"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <Button
-        android:id="@+id/callsBt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="onCallsBtClick"
-        android:text="Calls"
-        app:layout_constraintRight_toRightOf="parent"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.047"
-        app:layout_constraintVertical_bias="0.032"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/notificationsBt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:onClick="onNotificationsBtClick"
-        android:text="Notifications"
-        app:layout_constraintLeft_toRightOf="@+id/smsBt"
-        app:layout_constraintTop_toTopOf="parent"/>
+        <Button
+            android:id="@+id/callsBt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:onClick="onCallsBtClick"
+            android:text="Calls"
+            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <Button
+            android:id="@+id/smsBt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:onClick="onSmsBtClick"
+            android:text="sms"
+            app:layout_constraintLeft_toRightOf="@+id/callsBt"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <Button
+            android:id="@+id/notificationsBt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:onClick="onNotificationsBtClick"
+            android:text="Notifications log"
+            android:textAllCaps="false"
+            app:layout_constraintLeft_toRightOf="@+id/smsBt"
+            app:layout_constraintTop_toTopOf="parent"/>
+    </LinearLayout>
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="351dp"
-        android:layout_height="412dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:scrollbars="horizontal|vertical"
-        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/buttonPanel"/>
 
 </android.support.constraint.ConstraintLayout>
