--- a/android/RemoteTouch/app/src/main/res/layout/content_main.xml
+++ b/android/RemoteTouch/app/src/main/res/layout/content_main.xml
@@ -52,9 +52,8 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="horizontal|vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonPanel"/>
