--- a/android/RemoteTouch/app/src/main/res/menu/menu_main.xml
+++ b/android/RemoteTouch/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,8 @@
         android:orderInCategory="100"
         android:title="@string/Actions.Settings"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_export_notification_logs"
+        android:title="@string/Actions.Export_notification_log"
+        app:showAsAction="never"/>
 </menu>
