--- a/android/RemoteTouch/app/src/main/res/layout/pair_key_dialog.xml
+++ b/android/RemoteTouch/app/src/main/res/layout/pair_key_dialog.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/pairKeyValue"
         android:textSize="@dimen/pair_key_value"
-        android:text="actual key pair"/>
+        android:text="?"/>
 
     <Button
         android:layout_width="wrap_content"
