--- a/android/RemoteTouch/app/src/main/res/values/preferences.xml
+++ b/android/RemoteTouch/app/src/main/res/values/preferences.xml
@@ -4,9 +4,10 @@
     <string name="Key.Sms.Enabled">pref_sms_enabled</string>
     <string name="Key.Calls.Enabled">pref_calls_enabled</string>
     <string name="Key.Notifications.Enabled">pref_notifications_enabled</string>
-    <string name="Key.Pair_key">pref_pair_key</string>
+    <string name="Key.Device.Pair_key">pref_device_pair_key</string>
     <string name="Key.Alerts.Enabled">pref_on</string>
     <string name="Def.Alerts.Enabled">true</string>
     <string name="Def.Calls.Enabled">false</string>
     <string name="Def.Sms.Enabled">false</string>
+    <string name="Key.Device.Name">pref_device_name</string>
 </resources>
