--- a/android/RemoteTouch/app/src/main/res/layout/pair_key_dialog.xml
+++ b/android/RemoteTouch/app/src/main/res/layout/pair_key_dialog.xml
@@ -11,12 +11,12 @@
         android:layout_height="wrap_content"
         android:id="@+id/pairKeyValue"
         android:textSize="@dimen/pair_key_value"
-        android:text="?"/>
+        android:text="\?"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/pairKeyBt"
-        android:text="Generate new pair key"/>
+        android:text="@string/generate_new_pair_key"/>
 
 </LinearLayout>
