--- a/android/RemoteTouch/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/android/RemoteTouch/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -7,11 +7,11 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_action_settings"
-            android:title="Settings"/>
+            android:title="@string/Actions.Settings"/>
         <item
             android:id="@+id/nav_developer"
             android:icon="@drawable/ic_action_not_secure"
-            android:title="Developer"/>
+            android:title="@string/Actions.Developer"/>
     </group>
 
     <!--<item android:title="Advanced">-->
