--- a/android/RemoteTouch/app/src/main/res/layout/pair_key_dialog.xml
+++ b/android/RemoteTouch/app/src/main/res/layout/pair_key_dialog.xml
@@ -17,6 +17,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/pairKeyBt"
-        android:text="@string/generate_new_pair_key"/>
+        android:text="@string/Actions.Generate_new_pair_key"/>
 
 </LinearLayout>
