--- a/android/RemoteTouch/app/src/main/res/layout/app_bar_navigation.xml
+++ b/android/RemoteTouch/app/src/main/res/layout/app_bar_navigation.xml
@@ -22,7 +22,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
-        android:id="@+id/flContent"
+        android:id="@+id/navigation_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize"/>
