--- a/android/RemoteTouch/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/android/RemoteTouch/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -14,17 +14,17 @@
             android:title="@string/Actions.Developer"/>
     </group>
 
-    <!--<item android:title="Advanced">-->
-        <!--<menu>-->
-            <!--<item-->
-                <!--android:id="@+id/nav_share"-->
-                <!--android:icon="@drawable/ic_menu_share"-->
-                <!--android:title="Share"/>-->
+    <item android:title="Advanced">
+        <menu>
+            <item
+                android:id="@+id/nav_notifications"
+                android:icon="@android:drawable/ic_popup_reminder"
+                android:title="@string/Actions.Notifications"/>
             <!--<item-->
                 <!--android:id="@+id/nav_send"-->
                 <!--android:icon="@drawable/ic_menu_send"-->
                 <!--android:title="Send"/>-->
-        <!--</menu>-->
-    <!--</item>-->
+        </menu>
+    </item>
 
 </menu>
