--- a/android/RemoteTouch/app/src/main/res/values/dimens.xml
+++ b/android/RemoteTouch/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="pair_key_value">20dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
