--- a/android/RemoteTouch/app/src/main/res/xml/preferences_connection.xml
+++ b/android/RemoteTouch/app/src/main/res/xml/preferences_connection.xml
@@ -2,7 +2,9 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--<PreferenceCategory android:title="Data">-->
-
+    <!--<CheckBoxPreference-->
+        <!--android:key="wifi enabled"-->
+        <!--android:title="WiFi"/>-->
     <!--</PreferenceCategory>-->
 
     <PreferenceCategory android:title="Server">
