--- a/android/RemoteTouch/app/src/main/res/menu/menu_developer.xml
+++ b/android/RemoteTouch/app/src/main/res/menu/menu_developer.xml
@@ -11,7 +11,10 @@
 
     <item
         android:id="@+id/action_export_notification_logs"
-        android:title="@string/Actions.Export_notification_log"
         android:icon="@android:drawable/ic_menu_save"
+        android:title="@string/Actions.Export_notification_log"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_test_br"
+        android:title="Send broadcast"/>
 </menu>
