--- a/android/RemoteTouch/app/src/main/res/layout/fragment_appinfo.xml
+++ b/android/RemoteTouch/app/src/main/res/layout/fragment_appinfo.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/appinfo_list"
-    android:name="cz.zelenikr.remotetouch.app.AppInfoFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context="cz.zelenikr.remotetouch.fragment.InstalledAppsFragment"
-    tools:listitem="@layout/fragment_appinfo_item"/>
+<LinearLayout android:id="@+id/appinfo_layout"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:paddingBottom="@dimen/activity_vertical_margin"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingTop="@dimen/activity_vertical_margin">
+
+    <Spinner
+        android:id="@+id/appinfo_list_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:entries="@array/app_list_types"/>
+
+    <FrameLayout
+        android:id="@+id/appinfo_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+</LinearLayout>
