--- a/android/RemoteTouch/app/src/main/res/layout/fragment_appinfo.xml
+++ b/android/RemoteTouch/app/src/main/res/layout/fragment_appinfo.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/appinfo_layout"
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin">
+<LinearLayout
+    android:id="@+id/appinfo_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <Spinner
         android:id="@+id/appinfo_list_spinner"
@@ -16,8 +18,25 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:entries="@array/app_list_types"/>
 
-    <FrameLayout
+
+    <android.support.percent.PercentFrameLayout
         android:id="@+id/appinfo_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent">
+
+        <me.itangqi.waveloadingview.WaveLoadingView
+            android:id="@+id/waveLoadingView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:layout_widthPercent="33%"
+            app:wlv_borderColor="@color/colorAccent"
+            app:wlv_borderWidth="3sp"
+            app:wlv_progressValue="62"
+            app:wlv_shapeType="circle"
+            app:wlv_titleCenter="@string/InstalledApps.Loading.Label"
+            app:wlv_titleCenterSize="16dp"
+            app:wlv_waveAmplitude="50"
+            app:wlv_waveColor="?colorAccent"/>
+    </android.support.percent.PercentFrameLayout>
 </LinearLayout>
