--- a/android/RemoteTouch/app/src/main/res/layout/fragment_appinfo_list.xml
+++ b/android/RemoteTouch/app/src/main/res/layout/fragment_appinfo_list.xml
@@ -7,6 +7,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layoutManager="LinearLayoutManager"
+    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
     tools:context="cz.zelenikr.remotetouch.fragment.InstalledAppsFragment"
     tools:listitem="@layout/fragment_appinfo_item"/>
