--- a/android/RemoteTouch/app/src/main/res/values/colors.xml
+++ b/android/RemoteTouch/app/src/main/res/values/colors.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <!--<color name="colorPrimary">#3f51b5</color>-->
+    <!--<color name="colorPrimaryDark">#303F9F</color>-->
+    <!--<color name="colorAccent">#FF4081</color>-->
+
+    <!--<color name="colorPrimary">#2196f3</color>-->
+    <!--<color name="colorPrimaryLight">#6ec6ff</color>-->
+    <!--<color name="colorPrimaryDark">#0069c0</color>-->
+    <!--<color name="colorPrimaryText">#000000</color>-->
+
+    <color name="colorPrimary">#1976d2</color>
+    <color name="colorAccent">#63a4ff</color>
+    <color name="colorPrimaryDark">#004ba0</color>
+    <color name="textColorPrimary">#ffffff</color>
 </resources>
