Using own server certificate.

--- a/android/RemoteTouch/app/src/main/res/values/preferences.xml
+++ b/android/RemoteTouch/app/src/main/res/values/preferences.xml
@@ -15,7 +15,7 @@
     <string name="Def.Sms.Enabled" translatable="false">false</string>
     <string name="Def.Device.Name">myPhone</string>
     <string name="Def.Notifications.Enabled" translatable="false">false</string>
-    <string name="Def.Server.Url" translatable="false">https://remotetouch-75ea3.appspot.com</string>
+    <string name="Def.Server.Url" translatable="false">https://remotetouch.tk</string>
     <string name="Key.Notifications.Installed_apps" translatable="false">pref_notifications_installed_apps</string>
     <string name="Key_Notifications_Selected_apps" translatable="false">pref_notifications_selected_apps</string>
 
