ConnectionSettings: Added connection types (mobile, roaming, wifi)

--- a/android/RemoteTouch/app/src/main/res/layout/fragment_appinfo.xml
+++ b/android/RemoteTouch/app/src/main/res/layout/fragment_appinfo.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:entries="@array/app_list_types"/>
+        android:entries="@array/AppList.Types"/>
 
 
     <android.support.percent.PercentFrameLayout
