--- a/android/RemoteTouch/app/src/main/res/values/arrays.xml
+++ b/android/RemoteTouch/app/src/main/res/values/arrays.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="app_list_types">
+    <string-array name="AppList.Types">
         <item>All applications</item>
         <item>Selected applications</item>
+    </string-array>
+    <string-array name="Connection.Types">
+        <item>Mobile data</item>
+        <item>Roaming</item>
+        <item>Wi-Fi</item>
+    </string-array>
+    <string-array name="Connection.Types.Values">
+        <item>MOBILE</item>
+        <item>ROAMING</item>
+        <item>WIFI</item>
     </string-array>
 </resources>
