--- a/android/RemoteTouch/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/android/RemoteTouch/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_action_settings"
+            android:icon="@drawable/ic_settings_power"
             android:title="@string/Navigation.Settings"/>
         <item
             android:id="@+id/nav_developer"
@@ -19,11 +19,11 @@
             <group android:checkableBehavior="single">
                 <item
                     android:id="@+id/nav_notifications"
-                    android:icon="@android:drawable/ic_popup_reminder"
+                    android:icon="@drawable/ic_notifications"
                     android:title="@string/Navigation.Notifications"/>
                 <item
                     android:id="@+id/nav_connection"
-                    android:icon="@drawable/ic_action_import_export"
+                    android:icon="@drawable/ic_import_export"
                     android:title="@string/Navigation.Connection"/>
             </group>
         </menu>
@@ -34,7 +34,7 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/nav_about"
-            android:icon="@android:drawable/ic_dialog_info"
+            android:icon="@drawable/ic_info"
             android:title="@string/Navigation.About"/>
     </group>
 
