--- a/android/RemoteTouch/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/android/RemoteTouch/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -7,7 +7,7 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings_power"
-            android:title="@string/Navigation.Settings"/>
+            android:title="@string/Navigation.MainSettings"/>
         <item
             android:id="@+id/nav_developer"
             android:icon="@drawable/ic_action_not_secure"
