--- a/android/RemoteTouch/app/src/main/res/xml/preferences_notification.xml
+++ b/android/RemoteTouch/app/src/main/res/xml/preferences_notification.xml
@@ -12,7 +12,12 @@
     <Preference
         android:icon="@drawable/ic_apps"
         android:key="@string/Key.Notifications.Installed_apps"
+        android:persistent="false"
         android:summary="@string/Preferences.Notifications.Installed_apps.Summary"
         android:title="@string/Preferences.Notifications.Installed_apps.Title"/>
-
+    <Preference
+        android:key="@string/Key.Notifications.Test"
+        android:persistent="false"
+        android:summary="@string/Preferences.Notifications.Test.Summary"
+        android:title="@string/Preferences.Notifications.Test.Title"/>
 </PreferenceScreen>
